--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,3 +20,88 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+ justify-content: center;
+ user-select: none;
+ list-style: none;
+ gap: 24px;
+ background-color: #fff;
+}
+
+.gallery-item{
+  list-style: none;
+}
+
+.gallery-image{
+  width: 360px;
+  height: 200px;
+  object-fit: cover;    
+}
+
+.feedback-form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 16px; 
+  border-radius: 8px;
+padding: 24px;
+width: 408px;
+height: 296px;
+background-color: #fff;
+}
+
+label{
+  display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: column;
+gap: 8px;
+}
+
+input{
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
+
+input:hover{
+border: 1px solid #000;
+}
+
+textarea{
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 80px; 
+}
+textarea:hover{
+  border: 1px solid #000;
+  }
+
+button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px; 
+border-radius: 8px;
+padding: 8px 16px;
+width: 95px;
+height: 40px;
+background-color: #4e75ff; 
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+border: none;
+}
+
+button:hover{
+  background-color: #6c8cff; 
+}
